<resources>
    <string name="app_name">Screen Title</string>

    <string name="nombre_completo">Nombre Completo</string>
    <string name="nombre_usuario"> </string>

    <string name="pick_time">Fecha de Nacimiento</string>
    <string name="fecha_usuario"> </string>

    <string name="telefono">Teléfono</string>
    <string name="telefono_usuario"> </string>

    <string name="email">E-mail</string>
    <string name="email_usuario"> </string>

    <string name="descripcion">Descripción del Contacto</string>
    <string name="desc">Descripción</string>
    <string name="descripcion_contacto"> </string>

    <string name="siguiente">Siguiente</string>

    <!--SEGUNDO LAYOUT-->

    <string name="confirmar_datos" >Confirmar Datos</string>
    <string name="confirmar_nombre">Elias Moran Urcia</string>
    <string name="confirmar_fecha">Fecha de Nacimiento: 10/8/1998</string>
    <string name="confirmar_telefono">Tel: 933212236</string>
    <string name="confirmar_email">Email: yoexerelias@gmail.com</string>
    <string name="confirmar_descripcion">Descripción: Estudio Ingenieria de Sistemas en Perú</string>

    <string name="editar_datos">Editar Datos</string>

    <!--PARAMETROS-->
    <string name="pNombres">nombre</string>
    <string name="pFecha">fecha</string>
    <string name="pTelefono">telefono</string>
    <string name="pEmail">email</string>
    <string name="pDescripcion">descripcion</string>
    <!--SEGUNDOS PARAMETROS-->
    <string name="paramNombres">pnombre</string>
    <string name="paramFecha">pfecha</string>
    <string name="paramTelefono">ptelefono</string>
    <string name="paramEmail">pemail</string>
    <string name="paramDescripcion">pdescripcion</string>

    <!--Mensaje cuando se dejen vacios los EditText-->
    <string name="mensaje_precaucion">Por favor, Ingrese todos sus datos</string>

</resources>