<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/relleno_pantalla"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:cursorVisible="false"
        android:hint="@string/nombre_completo"
        android:text="@string/nombre_usuario"
        />

    <EditText
        android:id="@+id/edtFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pick_time"
        android:textStyle="italic"
        android:focusable="false"
        android:clickable="true"
        android:onClick="showDatePickerDialog"
        />



</LinearLayout>